# 42cursus-05_minitalk

./: CMakeLists.txt  Makefile  client.c  common.h  errors_and_confirmation.c  server.c
include/: common.h
srcs/: client.c  errors_and_confirmation.c  server.c
